--- a/site/index.html
+++ b/site/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
 	<h1>Hello Coursera!</h1>
-	<h2>This is first page</h2>
+	<h2>This is first page...</h2>
+	<h3>Вау</h3>
+	<h4>!!!</h4>
 </body>
 </html>
